--- a/html/index.html
+++ b/html/index.html
@@ -6,4 +6,5 @@
 <body>
   <div id="image">
   </div>
+ <script href="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"> </script>
 </body>
